--- a/README
+++ b/README
@@ -1,2 +1,1 @@
-Document Me!
-sfdf
+Codes for the manuscript "Adaptive, sample-specific parameter selection for more accurate transcript assembly", Yihang Shen and Carl Kingsford.
